--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,27 @@ plugins {
 
 android {
     namespace 'cn.lanthing'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "cn.lanthing"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
+        }
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
+        ndk {
+            //noinspection ChromeOsAbiSupport
+            abiFilters("arm64-v8a")
         }
     }
 
@@ -43,6 +52,12 @@ android {
         exclude 'META-INF/INDEX.LIST'
         exclude 'META-INF/io.netty.versions.properties'
         exclude 'META-INF/{AL2.0,LGPL2.1}'
+    }
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+            version '3.22.1'
+        }
     }
 }
 
