--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.22.1)
 
 project(lanthing)
 
+set(CMAKE_CXX_STANDARD 17)
+set(LT_ANDROID ON)
+add_compile_definitions(LT_ANDROID=1)
+
 add_subdirectory(ltlib)
 
 add_library(${PROJECT_NAME} SHARED
@@ -14,8 +18,14 @@ add_library(${PROJECT_NAME} SHARED
         ${CMAKE_CURRENT_SOURCE_DIR}/graphics/decoder/video_decoder.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/graphics/renderer/video_renderer.h
         ${CMAKE_CURRENT_SOURCE_DIR}/graphics/renderer/video_renderer.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/graphics/drpipeline/ct_smoother.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/graphics/drpipeline/ct_smoother.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/graphics/drpipeline/video_decode_render_pipeline.h
         ${CMAKE_CURRENT_SOURCE_DIR}/graphics/drpipeline/video_decode_render_pipeline.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/graphics/drpipeline/video_statistics.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/graphics/drpipeline/video_statistics.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/graphics/widgets/widgets_manager.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/graphics/widgets/widgets_manager.cpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/audio/player/audio_player.h
         ${CMAKE_CURRENT_SOURCE_DIR}/audio/player/audio_player.cpp
