--- a/app/src/main/cpp/ltlib/CMakeLists.txt
+++ b/app/src/main/cpp/ltlib/CMakeLists.txt
@@ -8,10 +8,12 @@ add_library(${PROJECT_NAME} STATIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include/ltlib/pragma_warning.h
         ${CMAKE_CURRENT_SOURCE_DIR}/include/ltlib/threads.h
         ${CMAKE_CURRENT_SOURCE_DIR}/include/ltlib/times.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/ltlib/time_sync.h
 
         ${CMAKE_CURRENT_SOURCE_DIR}/src/logging.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/threads.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/times.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/time_sync.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
