--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
             abiFilters("arm64-v8a")
         }
     }
-    ndkVersion "23.2.8568313"
+    //ndkVersion "23.2.8568313"
 
     buildTypes {
         release {
