--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -57,7 +57,7 @@ target_link_libraries(${PROJECT_NAME}
         mediandk
         GLESv2
         EGL
-        c++_static
+        c++_shared
         ltlib
         transport
         ltproto
